# bigData

./: pyproject.toml  requirements.txt
backend/: .env  app.py  config.py  import_data.py  utils.py
frontend/: dashboard.py
frontend/pages/: main_page.py
frontend/utils/: config.py  crud.py  display_functions.py  fetch_data.py  pagination_utils.py  utils_json.py  validation_functions.py
mongodb-sample/: ECR.bon.json  ECR.firma.json  ECR.nui.json  parsed_ECR.bon.json  parsed_ECR.bon_zilnic.json
mongodb_completed/: ECR.bon_zilnic.json  ECR.nui.json
