[tool.poetry]
name = "mongobigdata"
version = "0.1.0"
description = ""
authors = ["powerwolf1 <zaporojan2017@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
flask = "^3.0.3"
streamlit = "^1.35.0"
streamlit-aggrid = "^1.0.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
